fix overflow on work section

--- a/styles/work.module.scss
+++ b/styles/work.module.scss
@@ -15,6 +15,7 @@
   justify-content: center;
   align-items: center;
   padding: 0 0 5rem 0;
+  overflow: hidden;
   &::before {
     content: "";
     position: absolute;
@@ -59,6 +60,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 1;
 }
 
 .card_wrapper {
